# AgentK

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-k-permissions.ts  index.html  package-lock.json  package.json  run-pi-visual-client.bat  tsconfig.electron.json  vite.config.ts
.github/workflows/: ci.yml
assets/icons/: icon.icns
docs/: architecture.md  file-format-sdk.md
editor/: tsconfig.json
editor/sdk/: index.ts
electron/: backend.ts  conversations.ts  file-formats.test.mjs  file-formats.ts  files.ts  main.ts  pi-runtime.ts  preload.cjs  resources.ts  settings.ts  skill-hub.test.mjs  skill-hub.ts  types.ts  utils.ts
electron/agent/: codex.ts  pool.ts  rpc.ts
extensions/k-plan/: index.test.ts  index.ts  package.json  tsconfig.json
pi-visual-client/: .gitignore  README.md  agent-k-permissions.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
pi-visual-client/src-tauri/: Cargo.toml  tauri.conf.json
pi-visual-client/src-tauri/capabilities/: default.json
pi-visual-client/src-tauri/src/: lib.rs  main.rs
pi-visual-client/src-tauri/src/agent/: mod.rs  rpc.rs
script/: build-editor-extensions.mjs  electron-dev.mjs  prepare-native.mjs  prepare-pi-runtime.mjs  run-linux.sh  run-windows.bat  test-linux.sh  test-windows.bat
skills/gdb-debug/: SKILL.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: mod.rs  rpc.rs
test/: messageContent.test.ts  projectActivity.test.ts
(+77 files in other folders)
