[package]
name = "pi-visual-client"
version = "0.1.0"
description = "A visual desktop client for Pi"
authors = ["Pi Visual Client contributors"]
edition = "2021"

[lib]
name = "pi_visual_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.0"
trash = "5.2.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mime_guess = "2"
percent-encoding = "2"
rand = "0.9"
